@@ -6,6 +6,9 @@ March 31, 2000 - Jim Whitehead
 
 March 31, 2000 - John Jannotti
 ------------------------------
+ - Simplified pounce deletion to just one function, picked
+   tnt-pounce-delete as the "survivor". (Note this is user visable,
+   but barely)
  - Simplified a lot of code by adding tnt-addassoc and using it.
  - renamed tnt-pounce-list to tnt-pounce-alist for consistency
  - Made tnt-away and tnt-away-alist use t/nil instead of 1/0.  This
